# libowl

./: .clang-format  .clang-tidy  .codedocs  .gdb_history  .gitignore  .gitmodules  .hdoc.toml  .json  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  Doxyfile.in  LICENSE  README.md  algorithm_8hpp_source.html  annotated.html  annotated_dup.js  binary__search_8hpp_source.html  build.py  build_debug.sh  build_debug_test.sh  build_release.sh  buildfile  button_8cpp.html  button_8hpp.html  button_8hpp_source.html  chrono_8hpp.html  chrono_8hpp.js  chrono_8hpp_source.html  classes.html  classmannele_1_1flags-members.html  classmannele_1_1flags.html  classmannele_1_1flags.js  classmannele_1_1runtime__error-members.html  classmannele_1_1runtime__error.html  classmannele_1_1runtime__error.js  classv0_1_1detail_1_1code__point__t-members.html  classv0_1_1detail_1_1code__point__t.html  classv0_1_1detail_1_1code__point__t.js  (+328 more)
EGL/: CMakeLists.txt  CMakeLists.txt.in
EGL/include/EGL/: render_manager.hpp
EGL/include/EGL/gui/: widget.hpp  window.hpp
EGL/include/EGL/vk/: context.hpp  core.hpp  extension.hpp  physical_device_manager.hpp  runtime.hpp
EGL/source/EGL/: render_manager.cpp
EGL/source/EGL/gui/: widget.cpp  window.cpp
EGL/source/EGL/vk/: context.cpp  defines.cpp  runtime.cpp
ELL/: CMakeLists.txt
ELL/include/ELL/: logger.hpp
ELL/source/ELL/: logger.cpp
EML/: CMakeLists.txt
EML/include/EML/: allocator_interface.hpp  allocator_utils.hpp  free_list_allocator.hpp  linear_allocator.hpp  memory_manager.hpp  monotonic_allocator.hpp  multipool_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
EML/include/EML/allocators/: allocator_interface.hpp  linear_allocator.hpp  stack_allocator.hpp  static_pool_allocator.hpp
EML/source/EML/: allocator_interface.cpp  free_list_allocator.cpp  memory_manager.cpp  monotonic_allocator.cpp  multipool_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
EML/source/EML/allocators/: linear_allocator.cpp  stack_allocator.cpp
EML/tests/: CMakeLists.txt
EML/tests/EML/: linear_allocator_test.cpp  main.cpp  monotonic_allocator_test.cpp  multipool_allocator_test.cpp  pool_allocator_test.cpp  stack_allocator_test.cpp
ESL/: CMakeLists.txt
ESL/bench/: CMakeLists.txt
ESL/bench/ESL/: main.cpp
ESL/include/ESL/allocators/: allocation_interface.hpp  allocator_utils.hpp  monotonic_allocator.hpp  monotonic_allocator.hpp.orig  multipool_allocator.hpp  multipool_allocator.hpp.orig  pool_allocator.hpp  pool_allocator.hpp.orig  stack_allocator.hpp  stack_allocator.hpp.orig
ESL/include/ESL/containers/: avl_map.hpp  flat_avl_map.hpp  heap_array.hpp  heap_array.hpp.orig  vector.hpp
ESL/include/ESL/utils/: compare.hpp  concepts.hpp  error_handling.hpp  errors.hpp  input_iterator.hpp  iterator.hpp  iterator.hpp.orig  logger.hpp  random_access_iterator.hpp
ESL/profiling/: CMakeLists.txt
ESL/profiling/ESL/: main.cpp
ESL/source/ESL/allocators/: monotonic_allocator.cpp  multipool_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
ESL/source/ESL/utils/: logger.cpp
ESL/tests/: CMakeLists.txt
ESL/tests/ESL/: main.cpp
ESL/tests/ESL/allocators/: monotonic_allocator_test.cpp  multipool_allocator_test.cpp  pool_allocator_test.cpp  stack_allocator_test.cpp
ESL/tests/ESL/containers/: vector_test.cpp
EWL/: CMakeLists.txt
EWL/include/EWL/: widget.hpp  window.hpp  window_manager.hpp
EWL/source/EWL/: widget.cpp  window.cpp  xcb_window.cpp
cacao/: CMakeLists.txt  CMakeLists.txt.in
cacao/include/cacao/: context.hpp  device.hpp  error.hpp  swapchain.hpp
cacao/include/cacao/gfx/: error.hpp  image.hpp  index_buffer.hpp  vertex_buffer.hpp
cacao/include/cacao/ui/: core.hpp  window.hpp
cacao/include/cacao/util/: error.hpp  flags.hpp
cacao/include/cacao/vulkan/: buffer.hpp  command_pool.hpp  core.hpp  descriptor_pool.hpp  descriptor_set_layout.hpp  shader.hpp  swapchain.hpp
cacao/source/cacao/: context.cpp  device.cpp
cacao/source/cacao/gfx/: image.cpp  index_buffer.cpp  vertex_buffer.cpp
cacao/source/cacao/ui/: window.cpp
cacao/source/cacao/util/: error.cpp
cacao/source/cacao/vulkan/: buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  shader.cpp  swapchain.cpp
epona_core/: CMakeLists.txt  CMakeLists.txt.in
epona_core/include/epona_core/: core.hpp  defines.hpp  render_manager.hpp
epona_core/include/epona_core/containers/: details.hpp  dynamic_array.hpp  flat_map.hpp
epona_core/include/epona_core/detail/: concepts.hpp  error_handling.hpp  logger.hpp
epona_core/include/epona_core/details/: compare.hpp  concepts.hpp  error_handling.hpp  logger.hpp
epona_core/include/epona_core/graphics/: instance.hpp
epona_core/include/epona_core/gui/: widget.hpp  window.hpp
epona_core/include/epona_core/memory/: details.hpp  multipool_allocator.hpp
epona_core/include/epona_core/vk/: core.hpp  device.hpp  extension.hpp  instance.hpp  physical_device.hpp  physical_device_manager.hpp  result.hpp  runtime.hpp  swapchain.hpp
epona_core/source/epona_core/: render_manager.cpp
epona_core/tests/: CMakeLists.txt
epona_library/: CMakeLists.txt  CMakeLists.txt.in
epona_library/bench/: CMakeLists.txt
epona_library/bench/epona_library/: main.cpp
epona_library/tests/: CMakeLists.txt
epona_util/tests/: CMakeLists.txt
examples/triangle_example/: CMakeLists.txt  main.cpp
modules/core/: CMakeLists.txt  CMakeLists.txt.in
modules/core/include/core/: core.hpp  (+2 more)
modules/gfx/: CMakeLists.txt  CMakeLists.txt.in
modules/ui/: CMakeLists.txt
modules/util/: CMakeLists.txt  CMakeLists.txt.in
modules/util/tests/: CMakeLists.txt
modules/vkn/: CMakeLists.txt  CMakeLists.txt.in
samples/fluid_simulation/: CMakeLists.txt
samples/playground/: CMakeLists.txt
samples/water_simulation/: CMakeLists.txt  CMakeLists.txt.in
samples/water_simulation/include/: particle_system.hpp
samples/water_simulation/water_simulation/: main.cpp
utility/: CMakeLists.txt  CMakeLists.txt.in
utility/utility/: assert.hpp  logger.cpp  logger.hpp  pointer.hpp
vermillon/: CMakeLists.txt  CMakeLists.txt.in
(+834 files in other folders)
